# BiciMad_package

./: README.md  bicimad-0.1.0-py3-none-any.whl  enunciado.ipynb  requirements.txt  testing_library.ipynb
bicimad/: pyproject.toml
bicimad/BiciMad/: BiciMad.py  __init__.py
bicimad/BiciMad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bicimad/UrlEMT/: UrlEMT.py  __init__.py  constants.py
bicimad/decorators/: __init__.py  types_decorator.py
bicimad/tests/: test_BiciMad.py  test_UrlEMT.py
